# renoir_codegen

./: Cargo.toml  Dockerfile  docker-compose.test.yaml  example.json
examples/: kafka.rs  prova.rs
resources/: example.json  input.csv  kafka.json
resources/docker/: Cargo.toml  compile.sh
resources/docker/src/: main.rs
src/: lib.rs
