[package]
name = "docker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
renoir_codegen = { git = "https://github.com/chinifabio/renoir_codegen.git" }
renoir = { version = "0.5.0", features = ["rdkafka"] }
rdkafka = "0.37.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }